// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    ₹234.00
  </h1>
</div>
`;

exports[`should correctly render expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    11
     
    expenses
     totalling 
    ₹21,232,134.00
  </h1>
</div>
`;
